# si2-breakout

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  training_run.txt
agents/: __init__.py  base_agent.py  dqn_play_agent.py  dummy_agent.py  environment.py  evaluate.py  manual_agent.py  rl_agent.py  train.py
agents/dqn/: double_dqn.py  dueling_dqn.py  nstep_dqn.py  per_dqn.py  plots.py  vanilla_dqn.py
models/a2c_breakout/: evaluations.npz
models/double_dqn/: best_model.pt  final_model.pt
models/dqn_breakout/: evaluations.npz
models/dueling_dqn/: best_model.pt  final_model.pt
models/nstep_dqn/: best_model.pt  final_model.pt
models/per_dqn/: best_model.pt  final_model.pt
models/per_dqn_1/: best_model.pt
models/per_dqn_v2/: best_model.pt  final_model.pt
models/per_dqn_v2_reward/: best_model.pt  final_model.pt
models/per_dqn_v3/: best_model.pt  final_model.pt
models/ppo_breakout/: evaluations.npz
models/vanilla_dqn/: best_model.pt  final_model.pt
models/vanilla_dqn_1/: final_model.pt
scripts/: compare.py  evaluate.py  plots.py
server/: __init__.py  logic.py  server.py
tests/: test_logic.py
