[project]
name = "si2-breakout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-game-framework>=1.1.0",
    "gymnasium>=1.3.0",
    "numpy>=2.4.6",
    "sb3-contrib>=2.9.0",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.20.0",
]
